--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
 
 body {
   background-color: black;
+  font-family: 'Oswald', sans-serif;
+}
+
+li {
+  list-style-type: none;
 }
 
 .App {
@@ -46,7 +51,7 @@ body {
   object-fit: cover;
   object-position: 100% 0;
 
-  height: 85vh;
+  height: 95vh;
   opacity: 0.5;
 }
 
@@ -61,4 +66,53 @@ body {
   margin-left: 10%;
   line-height: 130px;
   font-family: 'Oswald', sans-serif;
+}
+
+.gridHeroes {
+  width: 80%;
+  margin: 0 auto;
+  padding: 5% 0 5% 0;
+  display: grid;
+  grid-template-columns: 6fr 6fr 6fr 6fr 6fr 6fr;
+}
+
+.heroesContainer {
+  background-color: white;
+  width: 100%;
+}
+
+.heroItem {
+  margin: 2%;
+}
+
+.heroItem img {
+  width: 90%;
+}
+
+.heroItem p{
+  background-color: black;
+  width: 90%;
+  height: 50px;
+  margin: 0 auto;
+  color: white;
+}
+
+.footer-container {
+  display: grid;
+  grid-template-columns: 3fr 3fr 3fr 6fr 6fr; 
+  padding: 5%;
+  background-color: #222222;
+  color: white;
+}
+
+.footer-container h3 {
+  font-weight: bold;
+}
+
+.footer-container ul {
+  text-align: left;
+}
+
+.footer-container li {
+  color: #9B9B9B;
 }
