--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,17 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
+:root {
+  --red: #ED1B24;
+  --white: #fff;
+  --black: #000;
+  --black84: rgba(0, 0, 0, .84);
+  --black74: rgba(0, 0, 0, .77);
+  --light-grey: rgba(0, 0, 0, .16);
+  --text-grey: #9b9b9b;
+  --text-light-grey: #f2f2f2;
+  --footer: #222222;
+}
 
 body {
   background-color: black;
@@ -94,14 +107,15 @@ li {
   width: 90%;
   height: 50px;
   margin: 0 auto;
-  color: white;
+  color: var(--white);
+  border-top: 2px solid var(--red);
 }
 
 .footer-container {
   display: grid;
   grid-template-columns: 3fr 3fr 3fr 6fr 6fr; 
   padding: 5%;
-  background-color: #222222;
+  background-color: var(--footer);
   color: white;
 }
 
@@ -114,5 +128,190 @@ li {
 }
 
 .footer-container li {
-  color: #9B9B9B;
+  color: var(--text-grey);
+}
+
+.footer-container svg {
+  width: 50%;
+  height: 50%;
+}
+
+.footer-container .social-network img{
+  margin-right: 5%;
+}
+
+.card-div {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: var(--white);
+  padding: 10%;
+}
+
+.card-div h2 {
+  font-size: 62px;
+  font-weight: bold;
+}
+
+.card-div h5 {
+  color: var(--text-grey);
+}
+
+.card-div img {
+  margin: 0 auto;
+  width: 72%;
+}
+
+.card-div button {
+  width: 324px;
+  height: 61px;
+  margin: 0 auto;
+  font-size: 14px;
+  font-weight: bold;
+  font-family: 'Open Sans', sans-serif;
+  white-space: nowrap;
+  text-align: center;
+  background-color: var(--red);
+  color: var(--white);
+  border: none;
+  outline: none;
+}
+
+.card-div button:nth-last-child(1) {
+  background-color: var(--white);
+  color: var(--red);
+}
+
+.newsletter {
+  display: grid;
+  grid-template-columns: 2fr 3fr;
+}
+
+.newsletter .news-div {
+  display: inline-block;
+  background-color: var(--red);
+  color: var(--white);
+  font-weight: bold;
+  line-height: 78 px;
+  font-size: 62px;
+  width: 408px;
+  height: 329px;
+  margin-top: -10%;
+  margin-left: auto;
+  margin-bottom: 20%;
+  text-align: justify;
+  padding-top: 6%;
+  padding-bottom: 6%;
+  padding-left: 10%;
+  padding-right: 15%;
+}
+
+.newsletter .news-form {
+  padding: 5% 0 0 10%;
+  text-align: left;
+}
+
+.newsletter .news-form h4{
+  color: var(--white);
+  width: 40%;
+}
+
+.newsletter .excl {
+  color: var(--red);
+}
+
+.newsletter .news-form label {
+  margin-top: 5%;
+  color: var(--white);
+}
+
+.newsletter .news-form .input-email {
+  width: 40%;
+  border: 1px solid var(--text-light-grey);
+  width: 47%;
+  padding: 2%;
+}
+
+.newsletter .news-form .input-email::placeholder { 
+  color: var(--text-grey);
+  opacity: 1; 
+}
+
+.newsletter .news-form .input-email:-ms-input-placeholder { 
+  color: var(--text-grey);
+}
+
+.newsletter .news-form .input-email::-ms-input-placeholder { 
+  color: var(--text-grey);
+}
+
+.newsletter .news-form .btn-enviar {
+  background-color: var(--red);
+  border: 1px solid var(--red);
+  color: var(--white);
+  padding: 2%;
+}
+
+.carousel-container {
+  width: 60%;
+  margin: 10% auto;
+  position: relative;
+}
+
+.carousel-container h3{
+  margin-bottom: 20px;
+  margin-left: 40px;
+  text-align: left;
+  color: var(--white);
+  font-size: 28px;
+}
+
+.slider-arrow-right {
+  background-color: var(--black);
+  right: 40px;
+  top: -50px;
+  position: absolute;
+  border: 2px solid var(--white);
+  color: var(--white);
+}
+
+.slider-arrow-left {
+  background-color: var(--black);
+  right: -1825%;
+  top: -50px;
+  position: absolute;
+  border: 2px solid var(--white);
+  color: var(--white);
+}
+
+.hero-item-slider {
+  border-bottom: 2px solid var(--red);
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+}
+
+.hero-item-slider img{
+  width: 100%;
+}
+
+.hero-item-slider p {
+  background-color: transparent;
+  font-size: 18px;
+  color: var(--white);
+  white-space: nowrap;
+  margin-left: auto;
+  position: absolute;
+  bottom: 0;
+}
+
+.navbar {
+  display: grid;
+  grid-template-columns: 2fr 6fr;
+}
+
+.navbar li {
+  margin: 0 2% 0 2%;
 }
