--- a/src/App.css
+++ b/src/App.css
@@ -26,45 +26,11 @@ li {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.header {
-  background-color: black;
-}
-
 .bg-image { 
   object-fit: cover;
-  object-position: 100% 0;
+  object-position: 90% 20%;
 
-  height: 95vh;
+  height: 75vh;
   opacity: 0.5;
 }
 
@@ -79,239 +45,4 @@ li {
   margin-left: 10%;
   line-height: 130px;
   font-family: 'Oswald', sans-serif;
-}
-
-.gridHeroes {
-  width: 80%;
-  margin: 0 auto;
-  padding: 5% 0 5% 0;
-  display: grid;
-  grid-template-columns: 6fr 6fr 6fr 6fr 6fr 6fr;
-}
-
-.heroesContainer {
-  background-color: white;
-  width: 100%;
-}
-
-.heroItem {
-  margin: 2%;
-}
-
-.heroItem img {
-  width: 90%;
-}
-
-.heroItem p{
-  background-color: black;
-  width: 90%;
-  height: 50px;
-  margin: 0 auto;
-  color: var(--white);
-  border-top: 2px solid var(--red);
-}
-
-.footer-container {
-  display: grid;
-  grid-template-columns: 3fr 3fr 3fr 6fr 6fr; 
-  padding: 5%;
-  background-color: var(--footer);
-  color: white;
-}
-
-.footer-container h3 {
-  font-weight: bold;
-}
-
-.footer-container ul {
-  text-align: left;
-}
-
-.footer-container li {
-  color: var(--text-grey);
-}
-
-.footer-container svg {
-  width: 50%;
-  height: 50%;
-}
-
-.footer-container .social-network img{
-  margin-right: 5%;
-}
-
-.card-div {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  background-color: var(--white);
-  padding: 10%;
-}
-
-.card-div h2 {
-  font-size: 62px;
-  font-weight: bold;
-}
-
-.card-div h5 {
-  color: var(--text-grey);
-}
-
-.card-div img {
-  margin: 0 auto;
-  width: 72%;
-}
-
-.card-div button {
-  width: 324px;
-  height: 61px;
-  margin: 0 auto;
-  font-size: 14px;
-  font-weight: bold;
-  font-family: 'Open Sans', sans-serif;
-  white-space: nowrap;
-  text-align: center;
-  background-color: var(--red);
-  color: var(--white);
-  border: none;
-  outline: none;
-}
-
-.card-div button:nth-last-child(1) {
-  background-color: var(--white);
-  color: var(--red);
-}
-
-.newsletter {
-  display: grid;
-  grid-template-columns: 2fr 3fr;
-}
-
-.newsletter .news-div {
-  display: inline-block;
-  background-color: var(--red);
-  color: var(--white);
-  font-weight: bold;
-  line-height: 78 px;
-  font-size: 62px;
-  width: 408px;
-  height: 329px;
-  margin-top: -10%;
-  margin-left: auto;
-  margin-bottom: 20%;
-  text-align: justify;
-  padding-top: 6%;
-  padding-bottom: 6%;
-  padding-left: 10%;
-  padding-right: 15%;
-}
-
-.newsletter .news-form {
-  padding: 5% 0 0 10%;
-  text-align: left;
-}
-
-.newsletter .news-form h4{
-  color: var(--white);
-  width: 40%;
-}
-
-.newsletter .excl {
-  color: var(--red);
-}
-
-.newsletter .news-form label {
-  margin-top: 5%;
-  color: var(--white);
-}
-
-.newsletter .news-form .input-email {
-  width: 40%;
-  border: 1px solid var(--text-light-grey);
-  width: 47%;
-  padding: 2%;
-}
-
-.newsletter .news-form .input-email::placeholder { 
-  color: var(--text-grey);
-  opacity: 1; 
-}
-
-.newsletter .news-form .input-email:-ms-input-placeholder { 
-  color: var(--text-grey);
-}
-
-.newsletter .news-form .input-email::-ms-input-placeholder { 
-  color: var(--text-grey);
-}
-
-.newsletter .news-form .btn-enviar {
-  background-color: var(--red);
-  border: 1px solid var(--red);
-  color: var(--white);
-  padding: 2%;
-}
-
-.carousel-container {
-  width: 60%;
-  margin: 10% auto;
-  position: relative;
-}
-
-.carousel-container h3{
-  margin-bottom: 20px;
-  margin-left: 40px;
-  text-align: left;
-  color: var(--white);
-  font-size: 28px;
-}
-
-.slider-arrow-right {
-  background-color: var(--black);
-  right: 40px;
-  top: -50px;
-  position: absolute;
-  border: 2px solid var(--white);
-  color: var(--white);
-}
-
-.slider-arrow-left {
-  background-color: var(--black);
-  right: -1825%;
-  top: -50px;
-  position: absolute;
-  border: 2px solid var(--white);
-  color: var(--white);
-}
-
-.hero-item-slider {
-  border-bottom: 2px solid var(--red);
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  align-content: center;
-}
-
-.hero-item-slider img{
-  width: 100%;
-}
-
-.hero-item-slider p {
-  background-color: transparent;
-  font-size: 18px;
-  color: var(--white);
-  white-space: nowrap;
-  margin-left: auto;
-  position: absolute;
-  bottom: 0;
-}
-
-.navbar {
-  display: grid;
-  grid-template-columns: 2fr 6fr;
-}
-
-.navbar li {
-  margin: 0 2% 0 2%;
 }
