--- a/src/components/CardDiv/CardDiv.css
+++ b/src/components/CardDiv/CardDiv.css
@@ -39,3 +39,26 @@
     background-color: var(--white);
     color: var(--red);
   }
+
+@media (max-width: 600px) {
+  .card-div button {
+    width: 60%;
+    height: 40px;
+    font-size: 12px;
+  }
+
+  .card-div img {
+    margin: 0 auto;
+    width: 100%;
+  }
+
+  .card-div h2 {
+    font-size: 32px;
+    font-weight: bold;
+  }
+
+  .card-div h5 {
+    font-size: 14px;
+    font-weight: bold;
+  }
+}
