--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,28 +1,39 @@
 .footer-container {
-    display: grid;
-    grid-template-columns: 3fr 3fr 3fr 6fr 6fr; 
-    padding: 5%;
-    background-color: var(--footer);
-    color: white;
+  display: grid;
+  grid-template-columns: 3fr 3fr 3fr 6fr 6fr; 
+  padding: 5%;
+  background-color: var(--footer);
+  color: white;
+}
+
+.footer-container h3 {
+  font-weight: bold;
+}
+
+.footer-container ul {
+  text-align: left;
+}
+
+.footer-container li {
+  color: var(--text-grey);
+}
+
+.footer-container svg {
+  width: 50%;
+  height: 50%;
+}
+
+.footer-container .social-network img{
+  margin-right: 5%;
+}
+
+@media (max-width: 600px) {
+  .footer-container{
+    padding: 0;
+    left: 0;
   }
-  
   .footer-container h3 {
     font-weight: bold;
+    font-size: .8em;
   }
-  
-  .footer-container ul {
-    text-align: left;
-  }
-  
-  .footer-container li {
-    color: var(--text-grey);
-  }
-  
-  .footer-container svg {
-    width: 50%;
-    height: 50%;
-  }
-  
-  .footer-container .social-network img{
-    margin-right: 5%;
-  }
+}
