--- a/src/components/Slider/Slider.css
+++ b/src/components/Slider/Slider.css
@@ -52,3 +52,14 @@
     position: absolute;
     bottom: 0;
   }
+
+@media (max-width: 600px) {
+  .slider-arrow-left {
+    background-color: var(--black);
+    right: -500%;
+    top: -50px;
+    position: absolute;
+    border: 2px solid var(--white);
+    color: var(--white);
+  }
+}
