--- a/src/App.css
+++ b/src/App.css
@@ -15,45 +15,38 @@
 
 body {
   background-color: black;
-  font-family: 'Oswald', sans-serif;
-}
-
-li {
-  list-style-type: none;
 }
 
 .App {
   text-align: center;
 }
 
-.bg-image { 
-  object-fit: cover;
-  object-position: 90% 20%;
-
-  height: 75vh;
-  opacity: 0.5;
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 40vmin;
+  pointer-events: none;
 }
 
-.text-image {
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
   color: white;
-  font-size: 100px;
-  font-weight: bold;
-  position: absolute;
-  top: 50%;
-  width: 500px;
-  text-align: left;
-  margin-left: 10%;
-  line-height: 130px;
-  font-family: 'Oswald', sans-serif;
 }
 
-@media (max-width: 600px) 
-{
-  .bg-image {
-    width: 100%;
-  }
+.App-link {
+  color: #61dafb;
+}
 
-  .text-image {
-    display: none;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
   }
 }
