--- a/src/components/CardDiv/CardDiv.css
+++ b/src/components/CardDiv/CardDiv.css
@@ -1,4 +1,6 @@
-.card-div {
+
+@media only screen and (min-width: 1382px) {
+  .card-div {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -39,6 +41,7 @@
     background-color: var(--white);
     color: var(--red);
   }
+}
 
 @media (max-width: 600px) {
   .card-div button {
