--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,39 +1,89 @@
-.footer-container {
-  display: grid;
-  grid-template-columns: 3fr 3fr 3fr 6fr 6fr; 
-  padding: 5%;
-  background-color: var(--footer);
-  color: white;
+ul {
+  list-style-type: none;
+  padding: 0;
 }
 
-.footer-container h3 {
-  font-weight: bold;
-}
-
-.footer-container ul {
-  text-align: left;
-}
-
-.footer-container li {
-  color: var(--text-grey);
-}
-
-.footer-container svg {
-  width: 50%;
-  height: 50%;
-}
-
-.footer-container .social-network img{
-  margin-right: 5%;
-}
-
-@media (max-width: 600px) {
-  .footer-container{
-    padding: 0;
-    left: 0;
+@media only screen and (min-width: 1382px) {
+  .footer-container {
+    display: grid;
+    grid-template-columns: 3fr 3fr 3fr 6fr 6fr; 
+    padding: 5%;
+    background-color: var(--footer);
+    color: white;
   }
+  
+  .media, .marvel {
+    text-align: left;
+    display: block;
+  }
+  
+  .media-items, .marvel-items {
+    color: var(--text-grey);
+  }
+
   .footer-container h3 {
     font-weight: bold;
-    font-size: .8em;
   }
+  
+  .footer-container ul {
+    text-align: left;
+  }
+  
+  .footer-container li {
+    color: var(--text-grey);
+  }
+  
+  .footer-container svg {
+    width: 50%;
+    height: 50%;
+  }
+  
+  .social-media-items li {
+    display: inline;
+    margin: 2%;
+  }
+}
+
+@media only screen and (min-width: 600px) { }
+@media only screen and (min-width: 992px) { }
+
+
+  
+@media (max-width: 600px) {
+  .footer-container{
+    padding-top: 5%;
+    width: 100%;
+    text-align: center;
+    color: var(--text-grey);
+    background-color: var(--footer);
+  }
+    
+  .footer-container svg {
+    width: 10%;
+    margin: 5%;
+  }
+
+  .marvel-items, .media-items, .noticia{
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    padding-bottom: 5%;
+    border-bottom: 1px solid rgba(61, 61, 61, .7);
+    width: 80%;
+    margin: 10px auto;
+  }
+
+  .marvel, .media {
+    display: block;
+  }
+
+  .social-media-items {
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr 2fr;
+    padding: 5%;
+  }
+
+  .social-media {
+    margin: 0;
+  }
+
 }
