--- a/src/components/Newsletter/Newsletter.css
+++ b/src/components/Newsletter/Newsletter.css
@@ -1,4 +1,5 @@
-.newsletter {
+@media only screen and (min-width: 1382px) {
+  .newsletter {
     display: grid;
     grid-template-columns: 2fr 3fr;
   }
@@ -9,16 +10,14 @@
     color: var(--white);
     font-weight: bold;
     line-height: 78 px;
-    font-size: 62px;
+    font-size: 3.2em;
     width: 408px;
     height: 329px;
     margin-top: -10%;
     margin-left: auto;
     margin-bottom: 20%;
     text-align: justify;
-    padding-top: 5%;
-    padding-left: 10%;
-    padding-right: 15%;
+    padding: 10%;
   }
   
   .newsletter .news-form {
@@ -66,6 +65,7 @@
     color: var(--white);
     padding: 2%;
   }
+}
 
 
 /**
@@ -73,73 +73,64 @@
 */
 
 @media (max-width: 600px) {
-  .newsletter .news-div {
-    display: inline-block;
-    background-color: var(--red);
-    color: var(--white);
-    font-weight: bold;
-    line-height: 2em;
-    font-size: .9em;
-    width: 80%;
-    height: 20vh;
-    margin-top: -15%;
-    margin-bottom: 20%;
-    text-align: justify;
-    padding-top: 10%;
-    padding-left: 15%;
-    padding-right: 17%;
+  .newsletter {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    position: relative;
+    width: 100%;
+    height: 30vh;
   }
 
-  .newsletter .news-form {
-    padding: 5% 0 0 10%;
+  .news-div {
+    width: 40%;
+    height: 20vh;
+    position: absolute;
+    left: 10%;
+    top: -10%;
+    background-color: var(--red);
+    color: var(--white);
+    font-size: 1.2em;
+    text-align: justify;
+    font-weight: bold;
+    padding: 4%;
+    line-height: 1.8em;
+  }
+
+  .news-form {
+    width: 50%;
+    position: absolute;
+    left: 50%;
+    padding-left: 5%;
+    padding-top: 5%;
     text-align: left;
   }
-  
-  .newsletter .news-form h4{
-    color: var(--white);
-    margin: 0;
-    width: 100%;
-    font-size: .8em;
+
+  .news-form h4 {
+    color: white;
+    font-size: .7em;
+    text-align: left;
   }
-  
-  .newsletter .excl {
+
+  .news-form h4 span {
     color: var(--red);
   }
-  
-  .newsletter .news-form label {
-    margin-top: 5%;
-    color: var(--white);
+
+  .news-form label {
     font-size: .6em;
+    text-align: left; 
+    color: white;
   }
-  
-  .newsletter .news-form .input-email {
-    border: 1px solid var(--text-light-grey);
-    width: 60%;
+
+  .news-form input {
+    width: 90%;
     font-size: .7em;
-    height: 25px;
-    padding: 2%;
   }
-  
+
   .newsletter .news-form .btn-enviar {
     background-color: var(--red);
     border: 1px solid var(--red);
     color: var(--white);
     font-size: .7em;
-    height: 25px;
-    padding: 2%;
-  }
-
-  .newsletter .news-form .input-email::placeholder { 
-    color: var(--text-grey);
-    opacity: 1; 
-    font-size: .7em;
-  }
-  
-  .newsletter .news-form .input-email:-ms-input-placeholder { 
-    color: var(--text-grey);
-  }
-  
-  .newsletter .news-form .input-email::-ms-input-placeholder { 
-    color: var(--text-grey);
-  }
+    width: 90%;
+  } 
 }
