--- a/src/components/CardDiv/CardDiv.css
+++ b/src/components/CardDiv/CardDiv.css
@@ -44,6 +44,14 @@
 }
 
 @media (max-width: 600px) {
+  .card-div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--white);
+    padding: 10%;
+  }
+
   .card-div button {
     width: 60%;
     height: 40px;
@@ -53,15 +61,37 @@
   .card-div img {
     margin: 0 auto;
     width: 100%;
+    padding: 5% 0;
   }
 
   .card-div h2 {
-    font-size: 32px;
+    font-size: 3em;
     font-weight: bold;
   }
 
   .card-div h5 {
+    font-size: 1em;
+    font-family: 'Open Sans', sans-serif;
+    color: var(--text-grey);
+  }
+
+  .card-div button {
+    width: 60%;
+    height: 61px;
+    margin: 0 auto;
     font-size: 14px;
     font-weight: bold;
+    font-family: 'Open Sans', sans-serif;
+    white-space: nowrap;
+    text-align: center;
+    background-color: var(--red);
+    color: var(--white);
+    border: none;
+    outline: none;
+  }
+  
+  .card-div button:nth-last-child(1) {
+    background-color: var(--white);
+    color: var(--red);
   }
 }
