Fixing Tablets UI

--- a/src/components/ImageCard/ImageCard.css
+++ b/src/components/ImageCard/ImageCard.css
@@ -29,6 +29,23 @@
     }
 }
 
+@media only screen and (min-width: 600px) { }
+@media only screen and (min-width: 992px) and (max-width: 1024px){
+    .text-image {
+        color: var(--white);
+        font-size: 6em;
+        font-weight: bold;
+        position: absolute;
+        top: 50%;
+        width: 500px;
+        text-align: left;
+        margin-left: 10%;
+        line-height: 1.2em;
+        font-family: 'Oswald', sans-serif;
+        margin-top: -30%;
+    }
+}
+
 @media (max-width: 600px) {
     .card-image { 
         object-fit: cover;
