--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -44,10 +44,46 @@ ul {
   }
 }
 
-@media only screen and (min-width: 600px) { }
-@media only screen and (min-width: 992px) { }
+@media only screen and (min-width: 992px) and (max-width: 1024px){
+  .footer-container {
+    display: grid;
+    grid-template-columns: 3fr 3fr 3fr 6fr 6fr; 
+    padding: 5%;
+    background-color: var(--footer);
+    color: white;
+  }
+  
+  .media, .marvel {
+    text-align: left;
+    display: block;
+  }
+  
+  .media-items, .marvel-items {
+    color: var(--text-grey);
+  }
 
-
+  .footer-container h3 {
+    font-weight: bold;
+  }
+  
+  .footer-container ul {
+    text-align: left;
+  }
+  
+  .footer-container li {
+    color: var(--text-grey);
+  }
+  
+  .footer-container svg {
+    width: 50%;
+    height: 50%;
+  }
+  
+  .social-media-items li {
+    display: inline;
+    margin: 2%;
+  }
+}
   
 @media (max-width: 600px) {
   .footer-container{
