--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -24,6 +24,32 @@
     }
 }
 
+@media only screen and (min-width: 992px) and (max-width: 1024px){
+    .pagination-container {
+        background-color: var(--white);
+        height: 100%;
+        text-align: center;
+    }
+      
+    .pagination {
+        margin: 0 auto;
+    }
+      
+    .pagination .custom-link {
+        background: var(--white);
+        border: none;
+        color: var(--text-grey);
+        outline: none;
+    }
+      
+    .pagination .selected {
+        background: var(--red);
+        border: none;
+        color: var(--white);
+        outline: none;
+    }
+}
+
 @media (max-width: 600px) {
     .pagination-container {
         background-color: var(--white);
