--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -44,6 +44,45 @@ ul {
   }
 }
 
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .footer-container{
+    padding-top: 5%;
+    width: 100%;
+    text-align: center;
+    color: var(--text-grey);
+    background-color: var(--footer);
+  }
+    
+  .footer-container svg {
+    width: 10%;
+    margin: 5%;
+  }
+
+  .marvel-items, .media-items, .noticia{
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    padding-bottom: 5%;
+    border-bottom: 1px solid rgba(61, 61, 61, .7);
+    width: 80%;
+    margin: 10px auto;
+    font-size: 1.2em;
+  }
+
+  .marvel, .media {
+    display: block;
+  }
+
+  .social-media-items {
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr 2fr;
+    padding: 5%;
+  }
+
+  .social-media {
+    margin: 0;
+  }
+} 
+
 @media only screen and (min-width: 992px) and (max-width: 1024px){
   .footer-container {
     display: grid;
@@ -121,5 +160,4 @@ ul {
   .social-media {
     margin: 0;
   }
-
 }
