--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -75,3 +75,29 @@
         outline: none;
     }
 }
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+    .pagination-container {
+        background-color: var(--white);
+        height: 100%;
+        text-align: center;
+    }
+      
+    .pagination {
+        margin: 0 auto;
+    }
+      
+    .pagination .custom-link {
+        background: var(--white);
+        border: none;
+        color: var(--text-grey);
+        outline: none;
+    }
+      
+    .pagination .selected {
+        background: var(--red);
+        border: none;
+        color: var(--white);
+        outline: none;
+    }
+} 
