--- a/src/components/CardDiv/CardDiv.css
+++ b/src/components/CardDiv/CardDiv.css
@@ -1,196 +1,11 @@
+/* Computer */
+@import url('./styles/carddiv-xs.css') only screen and (min-width: 1382px);
 
-@media only screen and (min-width: 1382px) {
-  .card-div {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: var(--white);
-    padding: 10%;
-  }
+/* Tablets */
+@import url('./styles/carddiv-md.css') only screen and (min-width: 768px) and (max-width: 991px);
+
+/* iPads */
+@import url('./styles/carddiv-ls.css') only screen and (min-width: 992px) and (max-width: 1024px);
   
-  .card-div h2 {
-    font-size: 62px;
-    font-weight: bold;
-  }
-  
-  .card-div h5 {
-    color: var(--text-grey);
-  }
-  
-  .card-div img {
-    margin: 0 auto;
-    width: 72%;
-  }
-  
-  .card-div button {
-    width: 324px;
-    height: 61px;
-    margin: 0 auto;
-    font-size: 14px;
-    font-weight: bold;
-    font-family: 'Open Sans', sans-serif;
-    white-space: nowrap;
-    text-align: center;
-    background-color: var(--red);
-    color: var(--white);
-    border: none;
-    outline: none;
-  }
-  
-  .card-div button:nth-last-child(1) {
-    background-color: var(--white);
-    color: var(--red);
-  }
-}
-
-@media only screen and (min-width: 992px) and (max-width: 1024px){
-  .card-div {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: var(--white);
-    padding: 10%;
-    margin-top: -5%;
-  }
-  
-  .card-div h2 {
-    font-size: 62px;
-    font-weight: bold;
-  }
-  
-  .card-div h5 {
-    color: var(--text-grey);
-  }
-  
-  .card-div img {
-    margin: 0 auto;
-    width: 72%;
-  }
-  
-  .card-div button {
-    width: 324px;
-    height: 61px;
-    margin: 0 auto;
-    font-size: 14px;
-    font-weight: bold;
-    font-family: 'Open Sans', sans-serif;
-    white-space: nowrap;
-    text-align: center;
-    background-color: var(--red);
-    color: var(--white);
-    border: none;
-    outline: none;
-  }
-  
-  .card-div button:nth-last-child(1) {
-    background-color: var(--white);
-    color: var(--red);
-  }
-}
-
-@media (max-width: 600px) {
-  .card-div {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: var(--white);
-    padding: 10%;
-  }
-
-  .card-div button {
-    width: 60%;
-    height: 40px;
-    font-size: 12px;
-  }
-
-  .card-div img {
-    margin: 0 auto;
-    width: 100%;
-    padding: 5% 0;
-  }
-
-  .card-div h2 {
-    font-size: 3em;
-    font-weight: bold;
-  }
-
-  .card-div h5 {
-    font-size: 1em;
-    font-family: 'Open Sans', sans-serif;
-    color: var(--text-grey);
-  }
-
-  .card-div button {
-    width: 60%;
-    height: 61px;
-    margin: 0 auto;
-    font-size: 14px;
-    font-weight: bold;
-    font-family: 'Open Sans', sans-serif;
-    white-space: nowrap;
-    text-align: center;
-    background-color: var(--red);
-    color: var(--white);
-    border: none;
-    outline: none;
-  }
-  
-  .card-div button:nth-last-child(1) {
-    background-color: var(--white);
-    color: var(--red);
-  }
-}
-
-@media only screen and (min-width: 758px) and (max-width: 991px){
-  .card-div {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    background-color: var(--white);
-    padding: 10%;
-    margin-top: -5%;
-  }
-
-  .card-div button {
-    width: 60%;
-    height: 40px;
-    font-size: 12px;
-  }
-
-  .card-div img {
-    margin: 0 auto;
-    width: 100%;
-    padding: 5% 0;
-  }
-
-  .card-div h2 {
-    font-size: 3em;
-    font-weight: bold;
-  }
-
-  .card-div h5 {
-    font-size: 1em;
-    font-family: 'Open Sans', sans-serif;
-    color: var(--text-grey);
-  }
-
-  .card-div button {
-    width: 60%;
-    height: 61px;
-    margin: 0 auto;
-    font-size: 14px;
-    font-weight: bold;
-    font-family: 'Open Sans', sans-serif;
-    white-space: nowrap;
-    text-align: center;
-    background-color: var(--red);
-    color: var(--white);
-    border: none;
-    outline: none;
-  }
-  
-  .card-div button:nth-last-child(1) {
-    background-color: var(--white);
-    color: var(--red);
-  } 
-}
+/* Smartphones */
+@import url('./styles/carddiv-sm.css') (max-width: 600px);
