--- a/src/components/Newsletter/Newsletter.css
+++ b/src/components/Newsletter/Newsletter.css
@@ -1,269 +1,11 @@
-@media only screen and (min-width: 1382px) {
-  .newsletter {
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-  }
-  
-  .newsletter .news-div {
-    display: inline-block;
-    background-color: var(--red);
-    color: var(--white);
-    font-weight: bold;
-    line-height: 78 px;
-    font-size: 3.2em;
-    width: 408px;
-    height: 329px;
-    margin-top: -10%;
-    margin-left: auto;
-    margin-bottom: 20%;
-    text-align: justify;
-    padding: 10%;
-  }
-  
-  .newsletter .news-form {
-    padding: 5% 0 0 10%;
-    text-align: left;
-  }
-  
-  .newsletter .news-form h4{
-    color: var(--white);
-    width: 40%;
-  }
-  
-  .newsletter .excl {
-    color: var(--red);
-  }
-  
-  .newsletter .news-form label {
-    margin-top: 5%;
-    color: var(--white);
-  }
-  
-  .newsletter .news-form .input-email {
-    width: 40%;
-    border: 1px solid var(--text-light-grey);
-    width: 47%;
-    padding: 2%;
-  }
-  
-  .newsletter .news-form .input-email::placeholder { 
-    color: var(--text-grey);
-    opacity: 1; 
-  }
-  
-  .newsletter .news-form .input-email:-ms-input-placeholder { 
-    color: var(--text-grey);
-  }
-  
-  .newsletter .news-form .input-email::-ms-input-placeholder { 
-    color: var(--text-grey);
-  }
-  
-  .newsletter .news-form .btn-enviar {
-    background-color: var(--red);
-    border: 1px solid var(--red);
-    color: var(--white);
-    padding: 2%;
-  }
-}
+/* Computer */
+@import url('./styles/newsletter-xs.css') only screen and (min-width: 1382px);
 
-@media only screen and (min-width: 758px) and (max-width: 991px){
-  .newsletter {
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-  }
-  
-  .newsletter .news-div {
-    display: inline-block;
-    background-color: var(--red);
-    color: var(--white);
-    font-weight: bold;
-    line-height: 78 px;
-    font-size: 3em;
-    width: 85%;
-    height: 329px;
-    margin-top: -10%;
-    margin-left: 15%;
-    margin-bottom: 20%;
-    text-align: justify;
-    padding: 10%;
-  }
-  
-  .newsletter .news-form {
-    padding: 5% 0 0 10%;
-    text-align: left;
-  }
-  
-  .newsletter .news-form h4{
-    color: var(--white);
-    width: 70%;
-  }
-  
-  .newsletter .excl {
-    color: var(--red);
-  }
-  
-  .newsletter .news-form label {
-    margin-top: 5%;
-    color: var(--white);
-  }
-  
-  .newsletter .news-form .input-email {
-    width: 40%;
-    border: 1px solid var(--text-light-grey);
-    width: 47%;
-    padding: 2%;
-  }
-  
-  .newsletter .news-form .input-email::placeholder { 
-    color: var(--text-grey);
-    opacity: 1; 
-  }
-  
-  .newsletter .news-form .input-email:-ms-input-placeholder { 
-    color: var(--text-grey);
-  }
-  
-  .newsletter .news-form .input-email::-ms-input-placeholder { 
-    color: var(--text-grey);
-  }
-  
-  .newsletter .news-form .btn-enviar {
-    background-color: var(--red);
-    border: 1px solid var(--red);
-    color: var(--white);
-    padding: 2%;
-  }
-}
+/* Tablets */
+@import url('./styles/newsletter-md.css') only screen and (min-width: 768px) and (max-width: 991px);
 
-@media only screen and (min-width: 992px) and (max-width: 1024px){
-  .newsletter {
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-  }
+/* iPads */
+@import url('./styles/newsletter-ls.css') only screen and (min-width: 992px) and (max-width: 1024px);
   
-  .newsletter .news-div {
-    display: inline-block;
-    background-color: var(--red);
-    color: var(--white);
-    font-weight: bold;
-    line-height: 78 px;
-    font-size: 3.2em;
-    width: 408px;
-    height: 329px;
-    margin-top: -10%;
-    margin-left: 15%;
-    margin-bottom: 20%;
-    text-align: justify;
-    padding: 10%;
-  }
-  
-  .newsletter .news-form {
-    padding: 5% 0 0 10%;
-    text-align: left;
-  }
-  
-  .newsletter .news-form h4{
-    color: var(--white);
-    width: 40%;
-  }
-  
-  .newsletter .excl {
-    color: var(--red);
-  }
-  
-  .newsletter .news-form label {
-    margin-top: 5%;
-    color: var(--white);
-  }
-  
-  .newsletter .news-form .input-email {
-    width: 40%;
-    border: 1px solid var(--text-light-grey);
-    width: 47%;
-    padding: 2%;
-  }
-  
-  .newsletter .news-form .input-email::placeholder { 
-    color: var(--text-grey);
-    opacity: 1; 
-  }
-  
-  .newsletter .news-form .input-email:-ms-input-placeholder { 
-    color: var(--text-grey);
-  }
-  
-  .newsletter .news-form .input-email::-ms-input-placeholder { 
-    color: var(--text-grey);
-  }
-  
-  .newsletter .news-form .btn-enviar {
-    background-color: var(--red);
-    border: 1px solid var(--red);
-    color: var(--white);
-    padding: 2%;
-  }
-}
-
-@media (max-width: 600px) {
-  .newsletter {
-    display: grid;
-    grid-template-columns: 2fr 3fr;
-    position: relative;
-    width: 100%;
-    height: 30vh;
-  }
-
-  .news-div {
-    width: 40%;
-    height: 20vh;
-    position: absolute;
-    left: 10%;
-    top: -10%;
-    background-color: var(--red);
-    color: var(--white);
-    font-size: 1.2em;
-    text-align: justify;
-    font-weight: bold;
-    padding: 4%;
-    line-height: 1.8em;
-  }
-
-  .news-form {
-    width: 50%;
-    position: absolute;
-    left: 50%;
-    padding-left: 5%;
-    padding-top: 5%;
-    text-align: left;
-  }
-
-  .news-form h4 {
-    color: white;
-    font-size: .7em;
-    text-align: left;
-  }
-
-  .news-form h4 span {
-    color: var(--red);
-  }
-
-  .news-form label {
-    font-size: .6em;
-    text-align: left; 
-    color: white;
-  }
-
-  .news-form input {
-    width: 90%;
-    font-size: .7em;
-  }
-
-  .newsletter .news-form .btn-enviar {
-    background-color: var(--red);
-    border: 1px solid var(--red);
-    color: var(--white);
-    font-size: .7em;
-    width: 90%;
-  } 
-}
+/* Smartphones */
+@import url('./styles/newsletter-sm.css') (max-width: 600px);
