--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,235 +1,11 @@
-@media only screen and (min-width: 1382px) {
-  .carousel-container {
-    width: 60%;
-    margin: 10% auto;
-    position: relative;
-  }
-  
-  .carousel-container h3{
-    margin-bottom: 20px;
-    margin-left: 40px;
-    text-align: left;
-    color: var(--white);
-    font-size: 28px;
-  }
-  
-  .slider-arrow-right {
-    background-color: var(--black);
-    right: 40px;
-    top: -50px;
-    position: absolute;
-    border: 2px solid var(--white);
-    color: var(--white);
-  }
-  
-  .slider-arrow-left {
-    background-color: var(--black);
-    right: -1825%;
-    top: -50px;
-    position: absolute;
-    border: 2px solid var(--white);
-    color: var(--white);
-  }
-  
-  .hero-item-slider {
-    border-bottom: 2px solid var(--red);
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-  }
-  
-  .hero-item-slider img{
-    width: 100%;
-  }
-  
-  .hero-item-slider p {
-    background-color: transparent;
-    font-size: 18px;
-    color: var(--white);
-    white-space: nowrap;
-    margin-left: auto;
-    position: absolute;
-    bottom: 0;
-  }
-}
+/* Computer */
+@import url('./styles/carousel-xs.css') only screen and (min-width: 1382px);
 
-@media only screen and (min-width: 992px) {
-  .carousel-container {
-    width: 60%;
-    margin: 10% auto;
-    position: relative;
-  }
-  
-  .carousel-container h3{
-    margin-bottom: 20px;
-    margin-left: 40px;
-    text-align: left;
-    color: var(--white);
-    font-size: 28px;
-  }
-  
-  .slider-arrow-right {
-    background-color: var(--black);
-    right: 40px;
-    top: -50px;
-    position: absolute;
-    border: 2px solid var(--white);
-    color: var(--white);
-  }
-  
-  .slider-arrow-left {
-    background-color: var(--black);
-    right: -1200%;
-    top: -50px;
-    position: absolute;
-    border: 2px solid var(--white);
-    color: var(--white);
-  }
-  
-  .hero-item-slider {
-    border-bottom: 2px solid var(--red);
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-  }
-  
-  .hero-item-slider img{
-    width: 100%;
-  }
-  
-  .hero-item-slider p {
-    background-color: transparent;
-    font-size: 18px;
-    color: var(--white);
-    white-space: nowrap;
-    margin-left: auto;
-    position: absolute;
-    bottom: 0;
-  }
-}
+/* Tablets */
+@import url('./styles/carousel-md.css') only screen and (min-width: 768px) and (max-width: 991px);
 
-@media (max-width: 600px) {
-  .carousel-container {
-    width: 100%;
-    padding: 5%;
-    overflow: hidden;
-  }
-
-  .carousel-container h3 {
-    color: var(--white);
-    text-align: left;
-    margin: 5%;
-    font-size: .8em;
-  }
+/* iPads */
+@import url('./styles/carousel-ls.css') only screen and (min-width: 992px) and (max-width: 1024px);
   
-  .hero-item-slider {
-    border-bottom: 2px solid var(--red);
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-  }
-  
-  .hero-item-slider img{
-    width: 100%;
-  }
-  
-  .hero-item-slider p {
-    background-color: transparent;
-    font-size: .5em;
-    color: var(--white);
-    white-space: nowrap;
-    margin-left: auto;
-    position: absolute;
-    bottom: -15px;
-  }
-
-  .slider-arrow-right {
-    background-color: var(--black);
-    right: 40px;
-    top: -35px;
-    position: absolute;
-    border: 2px solid var(--white);
-    color: var(--white);
-    font-size: .5em;
-    display: block;
-  }
-  
-  .slider-arrow-left {
-    background-color: var(--black);
-    right: -500%;
-    top: -35px;
-    position: absolute;
-    border: 2px solid var(--white);
-    color: var(--white);
-    font-size: .5em;
-    display: block;
-  }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-  .carousel-container {
-    width: 100%;
-    padding: 5%;
-    overflow: hidden;
-    margin-top: 10%;
-  }
-
-  .carousel-container h3 {
-    color: var(--white);
-    text-align: left;
-    margin: 5%;
-    font-size: 1.2em;
-  }
-  
-  .hero-item-slider {
-    border-bottom: 2px solid var(--red);
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-    overflow: hidden;
-  }
-  
-  .hero-item-slider img{
-    width: 100%;
-  }
-  
-  .hero-item-slider p {
-    background-color: transparent;
-    font-size: 1.2em;
-    color: var(--white);
-    white-space: nowrap;
-    margin-left: auto;
-    position: absolute;
-    bottom: -15px;
-  }
-
-  .slider-arrow-right {
-    background-color: var(--black);
-    right: 40px;
-    top: -35px;
-    position: absolute;
-    border: 2px solid var(--white);
-    color: var(--white);
-    font-size: .5em;
-    display: block;
-  }
-  
-  .slider-arrow-left {
-    background-color: var(--black);
-    right: -1400%;
-    top: -35px;
-    position: absolute;
-    border: 2px solid var(--white);
-    color: var(--white);
-    font-size: .5em;
-    display: block;
-  }
-} 
+/* Smartphones */
+@import url('./styles/carousel-sm.css') (max-width: 600px);
