--- a/src/components/HeroesList/HeroesList.css
+++ b/src/components/HeroesList/HeroesList.css
@@ -39,29 +39,5 @@ li {
     border-top: 2px solid var(--red);
 }
 
-@media (max-width: 600px) {
-    .gridHeroes { 
-        width: 90%;
-        margin: 0 auto;
-        padding: 0 0 5% 0;
-        display: grid;
-        grid-template-columns: 2fr 2fr 2fr 2fr 2fr ;
-    }
-    
-    .heroItem p{
-        background-color: black;
-        width: 90%;
-        height: 30px;
-        margin: 0 auto;
-        color: var(--white);
-        border-top: 2px solid var(--red);
-        font-size: .6em;
-    }
-
-    .heroes-container h2 {
-        font-size: 12px;
-        text-align: left;
-        padding: 10% 0 2% 6%;
-        color: var(--text-black);
-    }
-}
+/* Smartphones */
+@import url('./styles/heroeslist-sm.css') (max-width: 600px)
