--- a/src/components/Pagination/Pagination.css
+++ b/src/components/Pagination/Pagination.css
@@ -1,103 +1,11 @@
-@media only screen and (min-width: 1382px) {
-    .pagination-container {
-        background-color: var(--white);
-        height: 100%;
-        text-align: center;
-    }
-      
-    .pagination {
-        margin: 0 auto;
-    }
-      
-    .pagination .custom-link {
-        background: var(--white);
-        border: none;
-        color: var(--text-grey);
-        outline: none;
-    }
-      
-    .pagination .selected {
-        background: var(--red);
-        border: none;
-        color: var(--white);
-        outline: none;
-    }
-}
+/* Computer */
+@import url('./styles/pagination-xs.css') only screen and (min-width: 1382px);
 
-@media only screen and (min-width: 992px) and (max-width: 1024px){
-    .pagination-container {
-        background-color: var(--white);
-        height: 100%;
-        text-align: center;
-    }
-      
-    .pagination {
-        margin: 0 auto;
-    }
-      
-    .pagination .custom-link {
-        background: var(--white);
-        border: none;
-        color: var(--text-grey);
-        outline: none;
-    }
-      
-    .pagination .selected {
-        background: var(--red);
-        border: none;
-        color: var(--white);
-        outline: none;
-    }
-}
+/* Tablets */
+@import url('./styles/pagination-md.css') only screen and (min-width: 768px) and (max-width: 991px);
 
-@media (max-width: 600px) {
-    .pagination-container {
-        background-color: var(--white);
-        height: 100%;
-        text-align: center;
-    }
-      
-    .pagination {
-        margin: 0 auto;
-    }
-      
-    .pagination .custom-link {
-        background: var(--white);
-        border: none;
-        color: var(--text-grey);
-        outline: none;
-    }
-      
-    .pagination .selected {
-        background: var(--red);
-        border: none;
-        color: var(--white);
-        outline: none;
-    }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-    .pagination-container {
-        background-color: var(--white);
-        height: 100%;
-        text-align: center;
-    }
-      
-    .pagination {
-        margin: 0 auto;
-    }
-      
-    .pagination .custom-link {
-        background: var(--white);
-        border: none;
-        color: var(--text-grey);
-        outline: none;
-    }
-      
-    .pagination .selected {
-        background: var(--red);
-        border: none;
-        color: var(--white);
-        outline: none;
-    }
-} 
+/* iPads */
+@import url('./styles/pagination-ls.css') only screen and (min-width: 992px) and (max-width: 1024px);
+  
+/* Smartphones */
+@import url('./styles/pagination-sm.css') (max-width: 600px);
