--- a/src/components/Newsletter/styles/newsletter-md.css
+++ b/src/components/Newsletter/styles/newsletter-md.css
@@ -8,7 +8,7 @@
     background-color: var(--red);
     color: var(--white);
     font-weight: bold;
-    line-height: 78 px;
+    line-height: 1.7em;
     font-size: 3em;
     width: 85%;
     height: 329px;
